--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <a href="class-01.md">Reading Notes Class-01</a>
         <br>
         <a href="class-02.md">Reading Notes Class-02</a>
+        <br>
+        <a href="class-03.md">Reading Notes Class-03</a>
+
 
     </main>
     <footer>
