--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="class-02.md">Reading Notes Class-02</a>
         <br>
         <a href="class-03.md">Reading Notes Class-03</a>
+        <a href="class-04.md">Reading Notes Class-04</a>
 
 
     </main>
