--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <a href="class-03.md">Reading Notes Class-03</a>
         <a href="class-04.md">Reading Notes Class-04</a>
         <a href="class-05.md">Reading Notes Class-05</a>
+        <a href="class-05.md">Reading Notes Class-06</a>
 
 
     </main>
