--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href="class-06.md">Reading Notes Class-06</a>
         <a href="class-07.md">Reading Notes Class-07</a>
         <a href="class-08.md">Reading Notes Class-08</a>
+        <a href="class-09.md">Reading Notes Class-09</a>
 
 
     </main>
