--- a/index.html
+++ b/index.html
@@ -22,17 +22,7 @@
             <h2>
                 Reading Notes
             </h2>
-        <a href="class-01.md">Reading Notes Class-01</a>
-        <a href="class-02.md">Reading Notes Class-02</a>
-        <a href="class-03.md">Reading Notes Class-03</a>
-        <a href="class-04.md">Reading Notes Class-04</a>
-        <a href="class-05.md">Reading Notes Class-05</a>
-        <a href="class-06.md">Reading Notes Class-06</a>
-        <a href="class-07.md">Reading Notes Class-07</a>
-        <a href="class-08.md">Reading Notes Class-08</a>
-        <a href="class-09.md">Reading Notes Class-09</a>
-
-
+        <a href="./Foundations/">Foundations</a>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
